# so-injector

./: .gitignore  CMakeLists.txt  README.md  README.txt
basic-elf/: CMakeLists.txt  Source.cpp
basic-so/: CMakeLists.txt  Source.cpp
so-injector/: CMakeLists.txt  Source.cpp
so-injector-sc/: CMakeLists.txt  Source.c  linker-script
so-injector/ElfParser/: ElfParser.cpp  ElfParser.h
so-injector/Guards/: FileGuard.cpp  FileGuard.h  MapGuard.cpp  MapGuard.h
so-injector/Injector/: Injector.cpp  Injector.h
